@@ -446,7 +446,7 @@ namespace Client62
 
 		OUT(lootee);
 		OUT(looter);
-		eq->slot_id = emu->slot_id;
+		eq->slot_id = ServerToClient62CorpseSlot(emu->slot_id);
 		OUT(auto_loot);
 
 		FINISH_ENCODE();
@@ -1105,7 +1105,7 @@ namespace Client62
 
 		IN(lootee);
 		IN(looter);
-		emu->slot_id = eq->slot_id;
+		emu->slot_id = Client62ToServerCorpseSlot(eq->slot_id);
 		IN(auto_loot);
 
 		FINISH_DIRECT_DECODE();
@@ -1317,6 +1317,7 @@ namespace Client62
 	static inline int16 ServerToClient62CorpseSlot(uint32 ServerCorpse)
 	{
 		//int16 Client62Corpse;
+		return ServerCorpse;
 	}
 
 	static inline uint32 Client62ToServerSlot(int16 Client62Slot)
@@ -1331,6 +1332,7 @@ namespace Client62
 	static inline uint32 Client62ToServerCorpseSlot(int16 Client62Corpse)
 	{
 		//uint32 ServerCorpse;
+		return Client62Corpse;
 	}
 }
 // end namespace Client62
