@@ -1234,7 +1234,7 @@ namespace Underfoot
 
 		OUT(lootee);
 		OUT(looter);
-		eq->slot_id = emu->slot_id + 1;
+		eq->slot_id = ServerToUnderFootCorpseSlot(emu->slot_id);
 		OUT(auto_loot);
 
 		FINISH_ENCODE();
@@ -3294,7 +3294,7 @@ namespace Underfoot
 
 		IN(lootee);
 		IN(looter);
-		emu->slot_id = eq->slot_id - 1;
+		emu->slot_id = UnderfootToServerCorpseSlot(eq->slot_id);
 		IN(auto_loot);
 
 		FINISH_DIRECT_DECODE();
@@ -4021,6 +4021,7 @@ namespace Underfoot
 	static inline uint32 ServerToUnderFootCorpseSlot(uint32 ServerCorpse)
 	{
 		//uint32 UnderfootCorpse;
+		return (ServerCorpse + 1);
 	}
 
 	static inline uint32 UnderfootToServerSlot(uint32 UnderfootSlot)
@@ -4046,6 +4047,7 @@ namespace Underfoot
 	static inline uint32 UnderfootToServerCorpseSlot(uint32 UnderfootCorpse)
 	{
 		//uint32 ServerCorpse;
+		return (UnderfootCorpse - 1);
 	}
 }
 // end namespace Underfoot
